# shortcut-alias

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.cfg  setup.py  shortcut_template.yaml
docs/: cli.md  configuration.md  shortcut_file.md  templating.md  variables.md
examples/: settings.yaml  shortcut.template.yaml
schema/: shortcut_schema.json  shortcut_schema.yaml
shortcut_alias/: __init__.py  __main__.py  commands.py  exceptions.py  options.py  shortcut.py  variables.py
src/: cli.rs  commands.rs  errors.rs  main.rs  settings.rs  shortcut.rs
