[package]
name = "shortcut-alias"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["string"] }
colored = "2.0.0"
glob = "0.3.0"
home = "0.5.4"
minijinja = "0.27.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"

[dev-dependencies]
tmp_env = "0.1.1"
tempdir = "0.3.7"

[package.metadata.maturin]
name = "shortcut-alias"
# Setting the name here is necessary for maturin to include the package in its builds.